--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,10 +45,10 @@ commands:
           - root-{{ checksum "package-lock.json" }}
       - restore_cache:
           keys:
-          - garden-service-{{ checksum "garden-service/package-lock.json" }}
+          - garden-service-0-{{ checksum "garden-service/package-lock.json" }}
       - restore_cache:
           keys:
-          - dashboard-{{ checksum "dashboard/package-lock.json" }}
+          - dashboard-0-{{ checksum "dashboard/package-lock.json" }}
       # only install if node_modules wasn't cached
       - run: if [ ! -d "node_modules" ]; then npm ci; fi
       - save_cache:
@@ -58,12 +58,12 @@ commands:
       - run: if [ ! -d "garden-service/node_modules" ]; then cd garden-service && npm ci; fi
       - save_cache:
           paths: [garden-service/node_modules]
-          key: garden-service-{{ checksum "garden-service/package-lock.json" }}
+          key: garden-service-0-{{ checksum "garden-service/package-lock.json" }}
 
       - run: if [ ! -d "dashboard/node_modules" ]; then cd dashboard && npm ci; fi
       - save_cache:
           paths: [dashboard/node_modules]
-          key: dashboard-{{ checksum "dashboard/package-lock.json" }}
+          key: dashboard-0-{{ checksum "dashboard/package-lock.json" }}
 
   docker_build:
     description: Builds and Tags a Docker Image
@@ -311,7 +311,9 @@ workflows:
       - integ-test-service:
           requires:
             - build-service
-      - build-dashboard
+      - build-dashboard:
+          requires:
+            - build-service
       - test-dashboard:
           requires:
             - build-dashboard
@@ -326,6 +328,8 @@ workflows:
             - build-service
       - build-dashboard:
           <<: *only-master
+          requires:
+            - build-service
       - test-dashboard:
           <<: *only-master
       - release-service-docker:
