--- a/garden-service/package.json
+++ b/garden-service/package.json
@@ -22,7 +22,7 @@
     "static"
   ],
   "dependencies": {
-    "@kubernetes/client-node": "0.10.1",
+    "@kubernetes/client-node": "git+https://github.com/garden-io/javascript.git#client-cert-auth",
     "@types/koa-static": "^4.0.1",
     "JSONStream": "^1.3.5",
     "analytics-node": "3.3.0",
